<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pictasusheader"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:text="@string/dummy_name"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_harga"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_text"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spesifikasi"
            android:textSize="15sp"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginBottom="8dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/cpu"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_spec_cpu"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/display"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_spec_display"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/camera"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_spec_camera"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/baterry"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_spec_battery"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/display"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_spec_display"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginRight="@dimen/acticity_horizontal_margin"
                        android:text="@string/other"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/spec_other"/>
                </TableRow>
            </TableLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/acticity_horizontal_margin"
            android:layout_marginRight="@dimen/acticity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:text="@string/beli"
                android:layout_marginLeft="@dimen/acticity_horizontal_margin"
                android:layout_marginRight="@dimen/acticity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chart"
                android:layout_toRightOf="@+id/btn1"
                android:layout_marginLeft="@dimen/acticity_horizontal_margin"
                android:layout_marginRight="@dimen/acticity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>